--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -93,6 +93,7 @@
                     <select name="type" id="" class="orderSearchSelect">
                         <option {% if search_type == 'route' %} selected {% endif %} value="route">노선</option>
                         <option {% if search_type == 'customer' %} selected {% endif %} value="customer">예약자</option>
+                        <option {% if search_type == 'vehicle' %} selected {% endif %} value="vehicle">차량번호</option>
                     </select>
                     <input autocomplete="off" name="search" type="text" value="{{search}}">
                     <label for="">날짜</label>
@@ -252,14 +253,12 @@
                         </td>
                         <td class="tdTypeA">계산서 발행처</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" value="{{detail.bill_place}}" name="bill_place" id="bill_recate" type="text" list="billList" class="inputSelect">
-                            <datalist id="billList">
+                            <select id="billList" class='inputSelect'>
                                 <option value=""></option>
-                                <option value="홈텍스">홈텍스</option>
-                                <option value="나라장터">나라장터</option>
-                                <option value="학교장터">학교장터</option>
-                                <option value="기타-">기타-</option>
-                            </datalist>
+                                {% for bill in bill_places %}
+                                <option {% if detail.bill_place == bill.category %} selected {% endif %} value="{{bill.category}}">{{bill.category}}</option>
+                                {% endfor %}
+                            </select>
                         </td>
                     </tr>
                     <tr>
@@ -268,22 +267,14 @@
                         </td>
                         <td class="tdTypeA">차량종류</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" value="{{detail.bus_type}}" name="bus_type" id="bus_type" type="text" list="depList" class="inputText">
-                        <datalist id="depList">
-                            <option value="41~45인승 대형버스">41~45인승 대형버스</option>
-                            <option value="45인승 대형버스">45인승 대형버스</option>
-                            <option value="41인승 대형버스">41인승 대형버스</option>
-                            <option value="33인승 중형버스">33인승 중형버스</option>
-                            <option value="28인승 대형우등버스">28인승 대형우등버스</option>
-                            <option value="24인승 미니썬롱">24인승 미니썬롱</option>
-                            <option value="24인승 미니버스">24인승 미니버스</option>
-                            <option value="21인승 프리미엄버스">21인승 프리미엄버스</option>
-                            <option value="21인승 중형우등버스">21인승 중형우등버스</option>
-                            <option value="19인승 미니우등버스">19인승 미니우등버스</option>
-                            <option value="16인승 미니우등버스">16인승 미니우등버스</option>
-                            <option value="14인승 밴">14인승 밴</option>
-                            <option value="10인승 밴">10인승 밴</option>
-                        </datalist>
+                            
+                            <select id="depList" class="inputSelect">
+                                <option></option>
+                                {% for vehicle in vehicle_types %}
+                                <option {% if detail.bus_type == vehicle.category %} selected {% endif %} value="{{vehicle.category}}">{{vehicle.category}}</option>
+                                {% endfor %}
+                                
+                            </select>
                         </td>
                         <td class="tdTypeA">*수금구분</td>
                         <td class="tdTypeC">
@@ -309,7 +300,14 @@
                     <tr>
                         <td class="tdTypeA">*예약자</td>
                         <td class="tdTypeC">
-                            <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="inputText length100 essential">
+                            <div class="accountTd">
+                                <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="inputText length100 essential">
+                                <div class="searchAccount">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                                        <path id="Icon_ionic-ios-search" data-name="Icon ionic-ios-search" d="M20.312,19.335l-4.45-4.49a6.342,6.342,0,1,0-.962.975l4.421,4.461a.685.685,0,0,0,.967.025A.689.689,0,0,0,20.312,19.335Zm-9.433-3.462a5.007,5.007,0,1,1,3.542-1.466A4.977,4.977,0,0,1,10.879,15.873Z" transform="translate(-4.5 -4.492)" fill="#fff"/>
+                                      </svg>                                  
+                                </div>
+                            </div>
                         </td>
                         <td class="tdTypeA">*전화번호</td>
                         <td class="tdTypeC"><input autocomplete="off" value="{{detail.customer_phone}}" name="customer_phone" type="text" class="inputText inputTextPhoneNum essential" maxlength="13">
@@ -322,12 +320,9 @@
                         <td class="tdTypeC">
                             <select name="order_type" id="type" class="inputSelect essentialSelect">
                                 <option value=""></option>
-                                <option {% if detail.order_type == '워크샵' %} selected {% endif %} value="워크샵">워크샵</option>
-                                <option {% if detail.order_type == '학단' %} selected {% endif %} value="학단">학단</option>
-                                <option {% if detail.order_type == '단체관람' %} selected {% endif %} value="단체관람">단체관람</option>
-                                <option {% if detail.order_type == '동호회' %} selected {% endif %} value="동호회">동호회</option>
-                                <option {% if detail.order_type == '결혼식' %} selected {% endif %} value="결혼식">결혼식</option>
-                                <option {% if detail.order_type == '기타' %} selected {% endif %} value="기타">기타</option>
+                                {% for order in order_types %}
+                                <option {% if detail.order_type == 'order.category' %} selected {% endif %} value="{{order.category}}">{{order.category}}</option>
+                                {% endfor %}
                             </select>
                         </td>
                     </tr>
@@ -346,12 +341,9 @@
                         <td class="tdTypeC">
                             <select name="operation_type" id="drive_type" class="inputSelect essentialSelect">
                                 <option value=""></option>
-                                <option {% if detail.operation_type == '왕복' %} selected {% endif %} value="왕복">왕복</option>
-                                <option {% if detail.operation_type == '편도출발' %} selected {% endif %} value="편도출발">편도출발</option>
-                                <option {% if detail.operation_type == '편도복귀' %} selected {% endif %} value="편도복귀">편도복귀</option>
-                                <option {% if detail.operation_type == '기사동행(1박2일)' %} selected {% endif %} value="기사동행(1박2일)">기사동행(1박2일)</option>
-                                <option {% if detail.operation_type == '기사동행(2박3일)' %} selected {% endif %} value="기사동행(2박3일)">기사동행(2박3일)</option>
-                                <option {% if detail.operation_type == '기사동행(전체일정)' %} selected {% endif %} value="기사동행(전체일정)">기사동행(전체일정)</option>
+                                {% for operation in operation_types %}
+                                <option {% if detail.operation_type == operation.category %} selected {% endif %} value="{{operation.category}}">{{operation.category}}</option>
+                                {% endfor %}
                             </select>
                         </td>
                         <td class="tdTypeA">참조사항</td>
@@ -624,6 +616,8 @@
 {% endblock %}
 
 
+
+
 {% block popup %}
 <div class="popupAreaModules">
     <div class="popupBgModules"></div>
@@ -699,6 +693,63 @@
         </div>
     </div>
   </div>
+
+
+
+    <div class="popupAreaModules">
+        <div class="popupBgModules"></div>
+        <div class="popupContainer">
+            <div class="popupHeader">
+                <div class="popupTitle">거래처 불러오기</div>
+            </div>
+            <div class="popupBody">
+                <form get="post" action="" class="popupSection">
+                    <div class="popupArticleCategori">거래처 검색</div> 
+                    <div class="popupArticleBox">
+                        <div class="popupArticleDouble accountArticle">
+                            <select class="popupArticleinput accountSelect">
+                                <option value="거래처명">거래처명</option>
+                                <option value="대표번호">대표번호</option>
+                            </select>
+                            <input autocomplete="off" type="text" class="popupArticleinput accountInput length100">
+                            <div class="btnModules accountSearchBtn">검색</div>
+                        </div>
+                    </div>
+                    <div class="popupArticleCategori">거래처 목록</div>                
+                    <div class="popupArticleBoxTable accountPopupArticleBoxTable">
+                        <div class="scrolling_table-list_header">
+                            <table class="table-list">
+                            <thead>
+                                <tr class="table-list_head-tr">
+                                <td class="table-list_head-tr_td">선택</td>
+                                <td class="table-list_head-tr_td">거래처명</td>
+                                <td class="table-list_head-tr_td">대표번호</td>
+                                </tr>
+                            </thead>
+                            </table>
+                        </div>
+                        <div class="scrolling_table-list_body">
+                            <table class="table-list accountTable">
+                            <tbody>
+                                <tr class="table-list_body-tr">
+                                    <td class="table-list_body-tr_td">
+                                        <input type="checkbox" calss="accountCheckbox">
+                                    </td>
+                                    <td class="table-list_body-tr_td">fdgs</td>
+                                    <td class="table-list_body-tr_td">sfdg</td>
+                                </tr>
+                            </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </form>
+                <div class="popupFooter">
+                    <div class="btnModules accountDeleteBtn">삭제</div>
+                    <div class="btnModules accountCloseBtn">닫기</div>
+                </div>
+            </div>
+        </div>
+    </div>
   {% endblock %}
   
   
@@ -758,5 +809,6 @@
 <script src="{% static 'js/dispatch/order/waypoint.js' %}"></script>
 <script src="{% static 'js/dispatch/order/dateFollow.js' %}"></script>
 <script src="{% static 'js/dispatch/order/routeCopy.js' %}"></script>
+<script src="{% static 'js/dispatch/order/loadAccount.js' %}"></script>
 
 {% endblock %}
