--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -1,3 +1,168 @@
+.searchName {
+    margin-right: 1rem;
+}
+
+.searchAreaBox .btnModules {
+    background-color: #444444;
+    margin-left: 2rem;
+}
+
+.addPeople {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 3.8rem;
+    border-radius: 0.2rem;
+    background-color: #444444;
+    font-size: 1.4rem;
+    color: white;
+    cursor: pointer;
+}
+
+.inputModules[name=use],
+.inputModules[name=age] {
+    margin-left: 2rem;
+}
+
+
+
+/*tableHead*/
+.tableHead {
+    width: 100%;
+    height: 4.8rem;
+    border-spacing: 0;
+    box-sizing: border-box;
+}
+
+.tableHead tr {
+    width: 100%;
+    height: 100%;
+    font-size: 1.4rem;
+    color: white;
+    background-color: #444444;
+}
+
+.tableHead td {
+    text-align: center;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.tableBody {
+    width: 100%;
+    height: 64em;
+    border-spacing: 0;
+    box-sizing: border-box;
+}
+
+table tbody tr {
+    width: 100%;
+    height: 6.4rem;
+    font-size: 1.4rem;
+    color: #191919;
+}
+
+table tbody tr:nth-child(odd) {
+    background-color: white;
+}
+
+table tbody tr:nth-child(even) {
+    background-color: #EFEFEF;
+}
+
+.tableBody td:nth-child(1) {
+    border-left: 0.1rem solid #D4D4D4;
+}
+
+.tableBody td {
+    border-right: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.tableBody td:nth-child(3) {
+    font-size: 1.4rem;
+    color: #0069D9;
+    cursor: pointer;
+}
+
+
+td:nth-child(1),
+td:nth-child(2) {
+    width: 3%;
+}
+
+td:nth-child(3),
+td:nth-child(4) {
+    width: 4%;
+}
+
+td:nth-child(7),
+td:nth-child(10) {
+    width: 6%;
+}
+
+td:nth-child(5),
+td:nth-child(8) {
+    width: 8%;
+}
+
+td:nth-child(9) {
+    width: 10%;
+}
+
+td:nth-child(6) {
+    width: 6%;
+}
+
+td:nth-child(11) {
+    width: 26%;
+}
+
+td:nth-child(12),
+td:nth-child(13) {
+    width: 8%;
+}
+
+td:nth-child(1),
+td:nth-child(2),
+td:nth-child(3),
+td:nth-child(4),
+td:nth-child(5),
+td:nth-child(6),
+td:nth-child(7),
+td:nth-child(8),
+td:nth-child(10),
+td:nth-child(12),
+td:nth-child(13) {
+    text-align: center;
+}
+
+.tableBody td:nth-child(9),
+.tableBody td:nth-child(11) {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.btnBox div {
+    background-color: #444444;
+}
+
+.btnBox input {
+    background-color: #444444;
+    outline: none;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+
+
+
+
+
 /*popup*/
 .popupContainerDouble {
     width: 84rem;
@@ -25,6 +190,23 @@
     border-bottom: 0.1rem solid black;
 }
 
+.popupArticleUseEdit,
+.popupArticleUse {
+    justify-content: flex-start;
+}
+
+.popupArticleUseEdit label,
+.popupArticleUse label {
+    font-size: 1.4rem;
+    margin-right: 2rem;
+    cursor: pointer;
+}
+
+.popupArticleUseEdit label:nth-child(1),
+.popupArticleUse label:nth-child(1) {
+    margin-right: 0;
+}
+
 .popupArticleCategori:nth-child(1) {
     margin-top: 0;
 }
@@ -46,10 +228,6 @@
 
 .popupArticleDoubleLicense {
     visibility: hidden;
-}
-
-.DriverLicenseLabel {
-    word-break: keep-all;
 }
 
 .editPopupContainer {
@@ -96,395 +274,30 @@
     width: 70rem;
 }
 
-
-
-
-
-
-
-.search-Container {
-    height: 4.8rem;
-    padding: 0 2rem;
-    box-shadow: 0.1rem 0.1rem 0.1rem rgba(65, 69, 73, 0.3),
-        0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
-}
-
-.search-Form_input {
-    width: 26rem;
-    height: 3.2rem;
-    border-radius: 0.5rem;
-    border: none;
-    background-color: #f1f3f4;
-}
-
-.search-Form_search-btn {
-    width: auto;
-    padding: 0.4rem 1.6rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    font-size: 1.4rem;
-    background-color: #4E5869;
-    color: white;
-    cursor: pointer;
-    box-sizing: border-box;
-}
-
-.popup-area-box_btn {
-    width: auto;
-    height: 2.8rem;
-    padding: 0.4rem 1.6rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    font-size: 1.4rem;
-    color: black;
-    margin-right: 1.2rem;
-    cursor: pointer;
-    box-sizing: border-box;
-}
-
-.member-upload {
-    margin-right: 0;
-    background-color: #107C41;
-    color: white;
-}
-
-.popup-area-box_btn_create {
-    width: auto;
-    height: 2.8rem;
-    padding: 0.4rem 1.6rem;
-    background-color: #61B4E5;
-    border-radius: 0.3rem;
-    font-size: 1.4rem;
-    color: white;
-    margin-right: 1.2rem;
-    cursor: pointer;
-    box-sizing: border-box;
-}
-
-.popupArticleDouble .PopupDataInputEmergency {
-    width: 14.8rem;
-}
-
-.popupArticleDouble .PopupDataInputEmergencyRelation {
-    width: 8rem;
-}
-
-.popupArticleDouble .hrEmergency {
-    width: 14.8rem;
-}
-
-.popupArticleDouble .hrEmergencyRelation {
-    width: 8rem;
-}
-
-.popupArticleDouble .popupArticleLabelRelation {
-    width: 4rem;
-    margin-left: 1.2rem;
-}
-
-.memberOpenPrint{
-    color: #0069D9;
-}
-
-
-
-
-
-
-
-.main-layout_container {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 74rem;
-    border-radius: 0.2rem;
-    box-shadow: 0.1rem 0.1rem 0.1rem rgba(65, 69, 73, 0.3),
-        0.1rem 0.3rem 0.1rem rgba(65, 69, 73, 0.15);
-    background-color: white;
-}
-
-.ListHeaderArea {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 5.8rem;
-    box-sizing: border-box;
-    padding: 0 2rem;
-}
-
-.ListHeaderTitle {
-    font-size: 1.6rem;
-    font-weight: 700;
-}
-
-.filter-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 17rem;
-    height: 100%;
-    padding: 0 1rem;
-    box-sizing: border-box;
-}
-
-.filter-box input {
-    width: 1.4rem;
-    height: 1.4rem;
-}
-
-.filter-box label {
-    font-size: 1.4rem;
-    margin-left: 1rem;
-    cursor: pointer;
-}
-
-.member-delete {
-    position: absolute;
-    top: -5.8rem;
-    right: 22.2rem;
-    margin-right: 1rem;
-    background-color: #ED5565;
-    color: white;
-}
-
-.member-delete:hover {
-    background-color: #DC1E1E;
-}
-
-.member-create:hover {
-    padding: 0.3rem 1.5rem;
-    background-color: #0069D9;
-    border: 0.1rem solid #0069D9;
-    color: white;
-}
-
-.table-list-area {
-    width: 100%;
-    height: 60.5rem;
-    border-bottom: 0.1rem solid #ABABAB;
-}
-
-thead .member-height {
-    height: 4.4rem;
-    background-color: #4E5869;
-    color: white;
-}
-
-thead .member-height td {
-    border-top: 0.1rem solid #ABABAB;
-    border-bottom: 0.1rem solid #ABABAB;
-}
-
-.member-height td {
-    text-align: left;
-    padding: 0;
-}
-
-.member-height td:nth-child(1),
-.member-height td:nth-child(2),
-.member-height td:nth-last-child(1),
-.member-height td:nth-last-child(2) {
-    text-align: center;
-}
-
-.table-list_head-tr_td:nth-child(5) {
-    cursor: pointer;
-}
-
-.table-list_body-tr {
-    border: none;
-}
-
-.table-list_body-tr td,
-.table-list_body-tr td:nth-child(1),
-.table-list_body-tr td:nth-last-child(1) {
-    border: none;
-}
-
-.table-list_body-tr:nth-child(even) {
-    background-color: #EFF0F2;
-}
-
-tbody .member-height {
-    height: 5.6rem;
-    background-color: #FBFBFB;
-    color: #484848;
-    border-top: 0.1rem solid #ABABAB;
-    border-bottom: 0.1rem solid #ABABAB;
-}
-
-.member-height td:nth-child(1),
-.member-height td:nth-child(2),
-.member-height td:nth-child(3),
-.member-height td:nth-child(4) {
-    width: 4%;
-}
-
-.member-height td:nth-child(6) {
-    width: 6%;
-}
-
-.member-height td:nth-child(7) {
-    width: 10%;
-}
-
-.member-height td:nth-child(8) {
-    width: 12%;
-}
-
-.member-height td:nth-child(5) {
-    width: 6%;
-}
-
-.member-height td:nth-child(9) {
-    width: 6%;
-}
-
-.member-height td:nth-child(10) {
-    width: 24%;
-}
-
-.member-height td:nth-child(11),
-.member-height td:nth-child(12) {
-    width: 10%;
-}
-
-
-.table-list_body-tr_td:nth-child(3) {
-    color: #0069D9;
-}
-
-.table-list_body-tr_td:nth-child(3),
-.table-list_body-tr_td:nth-child(11),
-.table-list_body-tr_td:nth-child(12) {
-    cursor: pointer;
-}
-
-.tdDisplay {
-    display: flex;
-    align-items: center;
-}
-
-.option-order {
-    width: 0;
-    height: 0;
-    border-top: 1rem solid white;
-    border-right: 0.7rem solid transparent;
-    border-bottom: 1rem solid transparent;
-    border-left: 0.7rem solid transparent;
-    margin-top: 1rem;
-    margin-left: 0.8rem;
-}
-
-.pagenation-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 7.6rem;
-    padding: 2rem;
-    box-sizing: border-box;
-}
-
-.pagenation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-size: 1.6rem;
-}
-
-.prev_btn,
-.next_btn {
-    font-size: 1.6rem;
-    font-weight: 700;
-    margin: 1.6rem;
-    cursor: pointer;
-}
-
-.pagenation-numbering-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
-.pagenation span {
-    margin: 0 0.8rem;
-    cursor: pointer;
-}
-
-.thisPage {
-    color: #61B4E5;
-    font-weight: 700;
-}
-
-.popupArticleUpload {
-    position: relative;
-    display: flex;
-    width: 50rem;
-}
-
-.popupArticleUpload label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 9rem;
-    height: 2.6rem;
-    border-radius: 0.3rem 0 0 0.3rem;
-    background-color: #444444;
-    color: white;
-    font-size: 1.3rem;
-    box-sizing: border-box;
-    cursor: pointer;
-}
-
-.uploadFileText,
-.uploadLicenseFileText,
-.uploadDriverLicenseFileText {
-    width: 41rem;
-    padding-left: 1rem;
-    padding-right: 2rem;
-    font-size: 1.4rem;
-    border: 0.1rem solid #CDCDCE;
-    border-left: none;
-    border-radius: 0 0.3rem 0.3rem 0;
-    box-sizing: border-box;
-    outline: none;
-}
-
-.uploadFile,
-.uploadLicenseFile,
-.uploadDriverLicenseFile {
-    display: none;
-}
-
-.uploadDeleteBtn {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-}
-
-.saveUpload {
-    margin-right: 1rem;
-    background-color: #0069D9;
-}
-
-.uploadFormat {
-    position: absolute;
-    left: 2rem;
-    background-color: #444444;
-}
-
-.uploadFormat {
-    color: white;
-}
-
-.memberEditSaveBtn,
-.btnModulesCreate {
+.btnModulesCreate{
     background-color: #0069D9;
     margin-right: 1rem;
+}
+
+
+@media all and (min-width:1600px) and (max-width: 1780px) {
+    .tableHead tr {
+        font-size: 1.4rem;
+    }
+
+    .tableBody td {
+        font-size: 1.3rem;
+    }
+}
+
+@media all and (min-width:1460px) and (max-width: 1600px) {
+    .popupArticleDouble .popupIdBox .popupArticleinput {
+        width: 18.4rem;
+    }
+}
+
+@media all and (min-width:1024px) and (max-width: 1460px) {
+    /* .tableHead tr{
+        font-size: 1.4rem;
+    } */
 }
