--- a/static/css/vehicle/list.css
+++ b/static/css/vehicle/list.css
@@ -12,6 +12,10 @@
     background-color: #444444;
 }
 
+select[name=use]{
+    margin-left: 2rem;
+}
+
 .addVehicle {
     display: flex;
     justify-content: center;
