인사관리, 차량목록 - 사용 미사용 필터링 완료, 항목관리 급여관리 완료

--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -767,11 +767,13 @@
     const dataList = {% if dispatch_data_list %} {{ dispatch_data_list }} {% else %} '' {% endif %}
     const driverObj = {{ driver_dict }}
     const outsourcingObj = {{ outsourcing_dict }}
+    const client = {{ client }}
     console.log("DATA", data)
     console.log("DATA2", data2)
     console.log("driverObj", driverObj);
     console.log("outsourcingObj", outsourcingObj);
     console.log('dataList', dataList);
+    console.log('client', {{client}})
     {% endautoescape %}
 </script>
 <script>
