--- a/crudmember/templates/crudmember/setting.html
+++ b/crudmember/templates/crudmember/setting.html
@@ -169,6 +169,22 @@
     </form>
 
   </div>
+
+  <div class="salarySettingContainer">
+    <div class="salarySettingTitle">급여관리 항목</div>
+    <form method="post" action="{% url 'crudmember:salary_meal' %}" class="salarySettingForm">
+      {% csrf_token %}
+      <label for="">식대</label>
+      <input name="price" value="{{meal}}" type="text" class="numberOnly">
+      <input type="submit" class="btnModules" value="저장">
+    </form>
+    <form method="post" action="{% url 'crudmember:salary_date' %}" class="salarySettingForm">
+      {% csrf_token %}
+      <label for="">급여 지급일</label>
+      <input name="date" value="{{date}}" type="text" class="dayValidation">
+      <input type="submit" class="btnModules" value="저장">
+    </form>
+  </div>
 </div>
 {% endblock %}
 
@@ -178,4 +194,6 @@
 
 {% block script %}
 <script src="{% static 'js/crudmember/settingCreate.js' %}"></script>
+<script src="{% static 'js/onlyNumber.js' %}"></script>
+<script src="{% static 'js/crudmember/payday.js' %}"></script>
 {% endblock %}
