--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -32,12 +32,12 @@
           {% endfor %}
         </datalist>
         <select name="use" id="" class="inputModules">
-            <option {% if select == '사용' %} selected {% endif %} value="사용">사용</option>
-            <option {% if select == '미사용' %} selected {% endif %} value="미사용">미사용</option>
+            <option {% if use == '사용' %} selected {% endif %} value="사용">사용</option>
+            <option {% if use == '미사용' %} selected {% endif %} value="미사용">미사용</option>
         </select>
         <select name="age" id="" class="inputModules">
-            <option {% if select == '나이 전체' %} selected {% endif %} value="나이 전체">나이 전체</option>
-            <option {% if select == '65세 이상' %} selected {% endif %} value="65세 이상">65세 이상</option>
+            <option {% if age == '나이 전체' %} selected {% endif %} value="나이 전체">나이 전체</option>
+            <option {% if age == '65세 이상' %} selected {% endif %} value="65세 이상">65세 이상</option>
         </select>
       </div>
       <input autocomplete="off" type="submit" value="검색" class="btnModules">
@@ -79,9 +79,9 @@
           <td>
             <input autocomplete="off" name="delete_check" value="{{member.id}}" type="checkbox">
           </td>
-          <td>{{forloop.counter}}</td>
+          <td>{{start_num|sub:forloop.counter0}}</td>
           <td class="{{ forloop.counter0 }}">{{member.name}}</td>
-          <td>{{member.birthdate}}</td>
+          <td></td>
           <td>{{member.user_id}}</td>
           <td>{{member.role}}</td>
           <td>{{member.entering_date}}</td>
@@ -105,7 +105,7 @@
           {% if page_obj.has_previous %}
           <div class="page-item page-pre">
             <a class="page-link"
-              href="?top_box_selector={{selector}}&search={{searched}}&page={{ page_obj.previous_page_number }}"
+              href="?&name={{name}}&use={{use}}&age={{age}}&page={{ page_obj.previous_page_number }}"
               tabindex="-1">이전</a>
           </div>
           {% else %}
@@ -115,14 +115,14 @@
           {% endif %}
           {% for page in page_range %}
           <div class="page-item {% if page == page_obj.number %} page-activate {% endif %}">
-            <a class="page-link" href="?top_box_selector={{selector}}&search={{searched}}&page={{ page }}">{{ page }}</a>
+            <a class="page-link" href="?&name={{name}}&use={{use}}&age={{age}}&page={{ page }}">{{ page }}</a>
           </div>
           {% endfor %}
 
           {% if page_obj.has_next %}
           <div class="page-item">
             <a class="page-link page-next"
-              href="?top_box_selector={{selector}}&search={{searched}}&page={{ page_obj.next_page_number }}">다음</a>
+              href="?&name={{name}}&use={{use}}&age={{age}}&page={{ page_obj.next_page_number }}">다음</a>
           </div>
           {% else %}
           <div class="page-item page-next disabled">
@@ -154,7 +154,7 @@
 
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="{% url 'HR:member_create' %}" class="popupContainer popupContainerDouble" enctype="multipart/form-data">
+  <form method="post" action="{% url 'HR:member_create' %}" class="popupContainer popupContainerDouble memberFormCreate" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="popupHeader">
           <div class="popupTitle">직원등록</div>
@@ -164,11 +164,11 @@
               <div class="popupArticleCategori">기본정보</div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">이름</label>
-                      <input autocomplete="off"name="name" type="text" class="popupArticleinput createName">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>이름</label>
+                      <input autocomplete="off"name="name" type="text" class="popupArticleinput createName length100 essential">
                   </div>
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">담당업무</label>
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>담당업무</label>
                       <select name="role" id="role" class="popupArticleinput PopupDataInputWork">
                         <option value="">담당업무 선택</option>
                         <option value="용역">용역</option>
@@ -182,11 +182,11 @@
               </div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">입사일</label>
-                      <input autocomplete="off"name="entering_date" type="date" max="9999-12-31" class="popupArticleinput PopupDataInputEntering">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입사일</label>
+                      <input autocomplete="off"name="entering_date" type="date" max="9999-12-31" class="popupArticleinput PopupDataInputEntering essential">
                   </div>
                   <div class="popupArticleDouble popupArticleUse">
-                      <label for="" class="popupArticleLabel">사용여부</label>
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>사용여부</label>
                       <input type="radio" value="사용" name="use" id="use" checked>
                       <label for="use">사용</label>
                       <input type="radio" value="미사용" name="use" id="unUse">
@@ -195,32 +195,32 @@
               </div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">생년월일</label>
-                      <input autocomplete="off"name="birthdate" type="text" class="popupArticleinput PopupDataInputBirth" placeholder="ex)19990101">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>생년월일</label>
+                      <input autocomplete="off"name="birthdate" type="text" class="popupArticleinput PopupDataInputBirth essential" placeholder="ex)19990101">
                   </div>
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">휴대폰번호</label>
-                      <input autocomplete="off"name="phone_num" type="text" class="popupArticleinput PopupDataInputPhoneNum" placeholder="'-'을 생략하고 입력해 주세요.">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>휴대폰번호</label>
+                      <input autocomplete="off"name="phone_num" type="text" class="popupArticleinput PopupDataInputPhoneNum length100 essential makeHyphen" placeholder="'-'을 생략하고 입력해 주세요.">
                   </div>
               </div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel">비상연락망</label>
-                      <input autocomplete="off"name="emergency1" type="text" class="popupArticleinput PopupDataInputEmergency" placeholder="'-'을 생략하고 입력해 주세요.">
+                      <input autocomplete="off"name="emergency1" type="text" class="popupArticleinput PopupDataInputEmergency length100 makeHyphen" placeholder="'-'을 생략하고 입력해 주세요.">
                   </div>
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel">관계</label>
-                      <input autocomplete="off"name="emergency2" type="text" class="popupArticleinput PopupDataInputRelation">
+                      <input autocomplete="off"name="emergency2" type="text" class="popupArticleinput PopupDataInputRelation length100" placeholder="비상연락망 전화번호와 관계(부,모,아내 등)">
                   </div>
               </div>
               <div class="popupArticleBox">
                 <div class="popupArticleDouble">
-                    <label for="" class="popupArticleLabel">주소</label>
-                    <input autocomplete="off"name="address" type="text" class="popupArticleinput PopupDataInputAddress">
+                    <label for="" class="popupArticleLabel"><span class="importantStar">*</span>주소</label>
+                    <input autocomplete="off"name="address" type="text" class="popupArticleinput PopupDataInputAddress length100 essential">
                 </div>
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel">비고</label>
-                      <input autocomplete="off"name="note" type="text" class="popupArticleinput PopupDataInputBranck">
+                      <input autocomplete="off"name="note" type="text" class="popupArticleinput PopupDataInputBranck length100">
                   </div>
               </div>
               <div class="popupArticleCategori">운전정보</div>
@@ -267,7 +267,7 @@
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel">아이디</label>
                       <div class="popupIdBox">
-                        <input autocomplete="off"name="user_id" type="text" class="popupArticleinput createID">
+                        <input autocomplete="off"name="user_id" type="text" class="popupArticleinput createID length100 essential">
                         <div class="idchecker" onClick="id_overlap_check_hr()">중복확인</div>
                       </div>
                   </div>
@@ -278,7 +278,7 @@
               </div>
           </div>
           <div class="popupFooter">
-              <input autocomplete="off"type="submit" class="btnModules btnModulesCreate" value="등록">
+                <div class="btnModules btnModulesCreate">등록</div>
               <div class="btnModules popupCloseBtn">닫기</div>
           </div>
       </div>
@@ -291,7 +291,7 @@
 
 <div class="popupAreaModules">
     <div class="popupBgModules"></div>
-    <form method="post" action="{% url 'HR:member_edit' %}" class="editPopupContainer popupContainerDouble" enctype="multipart/form-data">
+    <form method="post" action="{% url 'HR:member_edit' %}" class="editPopupContainer popupContainerDouble memberEditForm" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="popupHeader">
             <div class="popupTitle">직원수정</div>
@@ -301,11 +301,11 @@
                 <div class="popupArticleCategori">기본정보</div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">이름</label>
-                        <input autocomplete="off" name="name" type="text" class="popupArticleinput hrName">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>이름</label>
+                        <input autocomplete="off" name="name" type="text" class="popupArticleinput hrName length100 editEssential">
                     </div>
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">담당업무</label>
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>담당업무</label>
                         <select name="role" id="editRole" class="popupArticleinput hrRole">
                           <option value="">담당업무 선택</option>
                           <option value="용역">용역</option>
@@ -319,11 +319,11 @@
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">입사일</label>
-                        <input autocomplete="off"name="entering_date" type="date" max="9999-12-31" class="popupArticleinput hrEntering">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입사일</label>
+                        <input autocomplete="off"name="entering_date" type="date" max="9999-12-31" class="popupArticleinput hrEntering length100 editEssential">
                     </div>
                     <div class="popupArticleDouble popupArticleUseEdit">
-                        <label for="" class="popupArticleLabel">사용여부</label>
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>사용여부</label>
                         <input name="use" type="radio" class="hrUse" id="hrUse">
                         <label for="hrUse">사용</label>
                         <input name="use" type="radio" class="hrUse" id="hrUnuse">
@@ -332,32 +332,32 @@
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">생년월일</label>
-                        <input autocomplete="off"name="birthdate" type="text" class="popupArticleinput hrBirth" placeholder="ex)19990101">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>생년월일</label>
+                        <input autocomplete="off"name="birthdate" type="text" class="popupArticleinput hrBirth length100 editEssential" placeholder="ex)19990101">
                     </div>
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">휴대폰번호</label>
-                        <input autocomplete="off"name="phone_num" type="text" class="popupArticleinput hrPhone" placeholder="'-'을 생략하고 입력해 주세요.">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>휴대폰번호</label>
+                        <input autocomplete="off"name="phone_num" type="text" class="popupArticleinput hrPhone length100 editEssential makeHyphen" placeholder="'-'을 생략하고 입력해 주세요.">
                     </div>
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">비상연락망</label>
-                        <input autocomplete="off"name="emergency1" type="text" class="popupArticleinput hrEmergency" placeholder="'-'을 생략하고 입력해 주세요.">
+                        <input autocomplete="off"name="emergency1" type="text" class="popupArticleinput hrEmergency length100 makeHyphen" placeholder="'-'을 생략하고 입력해 주세요.">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">관계</label>
-                        <input autocomplete="off"name="emergency2" type="text" class="popupArticleinput hrReation">
+                        <input autocomplete="off"name="emergency2" type="text" class="popupArticleinput hrReation length100" placeholder="비상연락망 전화번호와 관계(부,모,아내 등)">
                     </div>
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">주소</label>
-                        <input autocomplete="off"name="address" type="text" class="popupArticleinput hrAddress">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>주소</label>
+                        <input autocomplete="off"name="address" type="text" class="popupArticleinput hrAddress length100 editEssential">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">비고</label>
-                        <input autocomplete="off"name="note" type="text" class="popupArticleinput hrBlanck">
+                        <input autocomplete="off"name="note" type="text" class="popupArticleinput hrBlanck length100">
                     </div>
                 </div>
                 <div class="popupArticleCategori">운전정보</div>
@@ -420,7 +420,7 @@
                 <input name="id" type="hidden" class="sendToHidden">
             </div>
             <div class="popupFooter">
-                <input autocomplete="off"type="submit" class="btnModules btnModulesCreate" value="저장">
+                <div class="btnModules btnModulesCreate memberEditSaveBtn">저장</div>
                 <div class="btnModules popupCloseBtn">닫기</div>
             </div>
         </div>
@@ -442,4 +442,5 @@
 </script>
 <script src="{% static 'js/hr/hr_list_popup.js' %}"></script>
 <script src="{% static 'js/hr/ageCalculator.js' %}"></script>
+<script src="{% static 'js/hr/essential.js' %}"></script>
 {% endblock %}
