--- a/humanresource/templates/HR/salary_detail.html
+++ b/humanresource/templates/HR/salary_detail.html
@@ -122,6 +122,13 @@
                     </td>
                 </tr>
                 {% endfor %}
+                <tr class="workTotal">
+                    <td>소계</td>
+                    <td colspan="2">20</td>
+                    <td colspan="2">20</td>
+                    <td colspan="2">6</td>
+                    <td>26</td>
+                </tr>
             </tbody>
         </table>
 
@@ -175,28 +182,28 @@
                         <col style="width: 30%">
                     </colgroup>
                     <tr>
-                        <td class="titleTd">근로일수</td>
-                        <td>{{data.work_cnt}}일</td>
+                        <td class="titleTd">출근수당</td>
+                        <td class="printComma">{{data.salary.attendance}}</td>
                         <td class="titleTd">기본수당</td>
                         <td class="printComma">{{data.salary.base}}</td>
                     </tr>
                     <tr>
-                        <td class="titleTd">출근수당</td>
-                        <td class="printComma">{{data.salary.attendance}}</td>
+                        <td class="titleTd">퇴근수당</td>
+                        <td class="printComma">{{data.salary.leave}}</td>
                         <td class="titleTd">근속수당</td>
                         <td class="printComma">{{data.salary.service_allowance}}</td>
                     </tr>
                     <tr>
-                        <td class="titleTd">퇴근수당</td>
-                        <td class="printComma">{{data.salary.leave}}</td>
+                        <td class="titleTd">일반수당</td>
+                        <td class="printComma">{{data.salary.order}}</td>
                         <td class="titleTd">직급수당</td>
                         <td class="printComma">{{data.salary.position_allowance}}</td>
                     </tr>
                     <tr>
-                        <td class="titleTd">일반수당</td>
-                        <td class="printComma">{{data.salary.order}}</td>
                         <td class="titleTd">추가수당</td>
                         <td class="printComma">{{data.salary.additional}}</td>
+                        <td class="titleTd">식대</td>
+                        <td class="printComma"></td>
                     </tr>
                 </table>
 
