--- a/static/css/humanresource/print.css
+++ b/static/css/humanresource/print.css
@@ -118,6 +118,14 @@ body {
     background-color: #EFF0F2;
 }
 
+/* .workTotal{
+    width: 100%;
+    height: 9.7mm;
+    border-spacing: 0;
+    box-sizing: border-box;
+    padding: 0;
+} */
+
 
 
 
