--- a/humanresource/templates/HR/salary_list.html
+++ b/humanresource/templates/HR/salary_list.html
@@ -66,7 +66,7 @@
                     <td class="table-list_body-tr_td">
                         <input type="checkbox" class="amountCheck" name="member_id" value="{{member.id}}">
                     </td>
-                    <td class="table-list_body-tr_td">{{forloop.counter}}</td>
+                    <td class="table-list_body-tr_td">{{forloop.revcounter}}</td>
                     <td class="table-list_body-tr_td">{{member.name}}</td>
                     <td class="table-list_body-tr_td">{{member.entering_date}}</td>
                     <td class="table-list_body-tr_td">
@@ -78,7 +78,7 @@
                     <td class="table-list_body-tr_td">
                         <input type="text" class="amountInput length100" value="{{salary.position_allowance}}">
                     </td>
-                    <td class="table-list_body-tr_td addComma"></td>
+                    <td class="table-list_body-tr_td addComma">{{meal}}</td>
                     <td class="table-list_body-tr_td addComma">{{salary.attendance}}</td>
                     <td class="table-list_body-tr_td addComma">{{salary.leave}}</td>
                     <td class="table-list_body-tr_td addComma">{{salary.order}}</td>
