--- a/accounting/templates/accounting/collect.html
+++ b/accounting/templates/accounting/collect.html
@@ -38,7 +38,7 @@
     <div class="btnModules loadDepositBtn">입금내역 불러오기</div>
     {% csrf_token %}
     <div class="collectHead">
-        <div class="selectDate">2022년 09월</div>
+        <div class="selectDate"></div>
         <div class="visibelOption">
             <input autocomplete="off" type="checkbox" id="collectUnprocessed" checked>
             <label for="collectUnprocessed">미처리 보기</label>
@@ -86,7 +86,7 @@
                         {{order.arrival_date|slice:'2:'}}
                         {% endif %}
                     </td>
-                    <td>
+                    <td title="{{order.departure}} ▶ {{order.arrival}}">
                         <div>{{order.departure}} ▶ </div>
                         <div>{{order.arrival}}</div>
                     </td>
@@ -252,7 +252,7 @@
                             </div>
                             <div class="popupArticleDouble">
                                 <label for="" class="popupArticleLabel">비고</label>
-                                <input autocomplete="off" name="note" type="text" class="popupArticleinput length100 essential">
+                                <input autocomplete="off" name="note" type="text" class="popupArticleinput length100">
                             </div>
                         </div>
                         <div class="popupArticleBox">
