--- a/accounting/templates/accounting/deposit.html
+++ b/accounting/templates/accounting/deposit.html
@@ -153,7 +153,7 @@
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel"><span class="importantStar">*</span>거래일시</label>
-                      <input autocomplete="off" name="date" type="date" class="popupArticleinput essential">
+                      <input autocomplete="off" name="date" type="date" class="popupArticleinput essential" max="9999-12-31">
                   </div>
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel"><span class="importantStar">*</span>지급방식</label>
@@ -171,7 +171,7 @@
                   </div>
                   <div class="popupArticleDouble">
                       <label for="" class="popupArticleLabel"><span class="importantStar">*</span>가맹점 수수료</label>
-                      <input autocomplete="off" name="commission" type="text" class="popupArticleinput length100 essential numberOnly" placeholder="수수료가 없으면 '0'으로 기입해 주세요">
+                      <input autocomplete="off" name="commission" type="text" class="popupArticleinput length100 essential numberOnly" placeholder="수수료가 없으면 '0'으로 기입해 주세요" value="0">
                   </div>
               </div>
               <div class="popupArticleBox">
@@ -243,7 +243,7 @@
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>거래일시</label>
-                        <input autocomplete="off" name="date" type="date" class="popupArticleinput essentialEdit editDate">
+                        <input autocomplete="off" name="date" type="date" class="popupArticleinput essentialEdit editDate" max="9999-12-31">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>지급방식</label>
