--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -301,7 +301,7 @@
                         <td class="tdTypeA">*예약자</td>
                         <td class="tdTypeC">
                             <div class="accountTd">
-                                <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="inputText length100 essential">
+                                <input autocomplete="off" value="{{detail.customer}}" name="customer" type="text" class="loadClient inputText length100 essential">
                                 <div class="searchAccount">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                                         <path id="Icon_ionic-ios-search" data-name="Icon ionic-ios-search" d="M20.312,19.335l-4.45-4.49a6.342,6.342,0,1,0-.962.975l4.421,4.461a.685.685,0,0,0,.967.025A.689.689,0,0,0,20.312,19.335Zm-9.433-3.462a5.007,5.007,0,1,1,3.542-1.466A4.977,4.977,0,0,1,10.879,15.873Z" transform="translate(-4.5 -4.492)" fill="#fff"/>
@@ -310,7 +310,7 @@
                             </div>
                         </td>
                         <td class="tdTypeA">*전화번호</td>
-                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.customer_phone}}" name="customer_phone" type="text" class="inputText inputTextPhoneNum essential" maxlength="13">
+                        <td class="tdTypeC"><input autocomplete="off" value="{{detail.customer_phone}}" name="customer_phone" type="text" class="loadPhone inputText inputTextPhoneNum essential" maxlength="13">
                         </td>
                         <td class="tdTypeA">표찰정보</td>
                         <td class="tdTypeC">
@@ -321,7 +321,7 @@
                             <select name="order_type" id="type" class="inputSelect essentialSelect">
                                 <option value=""></option>
                                 {% for order in order_types %}
-                                <option {% if detail.order_type == 'order.category' %} selected {% endif %} value="{{order.category}}">{{order.category}}</option>
+                                <option {% if detail.order_type == order.category %} selected {% endif %} value="{{order.category}}">{{order.category}}</option>
                                 {% endfor %}
                             </select>
                         </td>
@@ -731,20 +731,13 @@
                         <div class="scrolling_table-list_body">
                             <table class="table-list accountTable">
                             <tbody>
-                                <tr class="table-list_body-tr">
-                                    <td class="table-list_body-tr_td">
-                                        <input type="checkbox" calss="accountCheckbox">
-                                    </td>
-                                    <td class="table-list_body-tr_td">fdgs</td>
-                                    <td class="table-list_body-tr_td">sfdg</td>
-                                </tr>
                             </tbody>
                             </table>
                         </div>
                     </div>
                 </form>
                 <div class="popupFooter">
-                    <div class="btnModules accountDeleteBtn">삭제</div>
+                    <div class="btnModules loadAccountBtn">불러오기</div>
                     <div class="btnModules accountCloseBtn">닫기</div>
                 </div>
             </div>
@@ -793,7 +786,6 @@
             changeForm.submit()
         }
     }
-
 
 </script>
 <script src="{% static 'js/lodash.js' %}"></script>
