--- a/static/css/document/company.css
+++ b/static/css/document/company.css
@@ -38,8 +38,6 @@
 
 
 
-
-
 .contentsAreaBox {
     position: relative;
     width: 100%;
@@ -335,6 +333,23 @@
     cursor: pointer;
 }
 
-.popupFooter div{
+.popupFooter div:nth-child(2){
     background-color: #444444;
+}
+
+.popupArticleInput{
+    width: 50rem;
+    height: 2.4rem;
+    padding-left: 0.3rem;
+    border: 0.1rem solid #B5B5B5;
+    border-radius: 0.2rem;
+    font-size: 1.5rem;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.groupAddBtn,
+.uploadFileAdd{
+    background-color: #0069D9;
+    margin-right: 1rem;
 }
